<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_version">1.4</string>
    <string name="app_name">LogoBatteryLWP V1.4</string>
	<string name="wallpaper_description">LogoBatteryLWP V1.4</string>

	<string name="premium_only">Premium Version only</string>
	
		
	<string name="about">About</string>
	<string name="settings">Settings</string>
	<string name="Copyright">Copyright by Oliver Geith</string>
	<string name="exit">Exit</string>
	<string name="debugging">Debugging</string>
	<string name="the_logo">The Logo</string>
	<string name="choose_background">Choose Background</string>
	<string name="choose_background_summary">Choose Background</string>
	<string name="enable_custom_background">Enable Custom Background</string>
    <string name="enable_gradient_background">Enable Gradient Background</string>

    <string name="category_battery_background_options">Battery Background Options</string>
	<string name="category_battery_options">Battery Options</string>
    <string name="category_font_options">Level Number Options</string>
    <string name="category_scale_options">Scale Options</string>
    <string name="category_style">Battery Style</string>
    <string name="category_style_summary">Battery Style Settings</string>
	<string name="category_size">Battery Size and Position</string>
    <string name="category_size_summary">Resizing and positioning of battery</string>
    <string name="category_logo_options">Logo Options</string>
    <string name="category_logo_options_summary">Logo Options ...</string>
    <string name="category_style_options">Special Options for specific Style</string>
    <string name="category_style_options_summary">Not all options are appliable for all Batteries</string>
    <string name="category_custom_background">Custom Background</string>
    <string name="category_colored_background">Colored Background</string>
    <string name="category_animation_options">Charge Animation Style</string>
    <string name="category_charge_options">Charge Options</string>
    <string name="category_charge_colors">Charge Colors</string>
    <string name="category_status_options">Battery Status Display</string>
    
    <string name="animation_delay">Animation delay</string>
    <string name="animation_delay_summary">Delaytime between the images in millieseconds. 50 is default</string>
    <string name="animation_delay_level">Animation delay on current level</string>
    <string name="animation_delay_level_summary">The delaytime, when the animation shows the current battery level. Default is 2500 millieseconds</string>
    <string name="animation_style">Charge Animation Style</string>
	<string name="animation_style_summary">Choose a Charge Animation Style</string>
	<string name="animation_enable">Enable Charge Animation</string>
	<string name="animation_enable_summary">Battery will animate on charge ....</string>
	
    <string name="opacity">Opacity</string>
    <string name="opacity_summary">How much of the Background-Image should shine through</string>
    <string name="style">Battery Style</string>
	<string name="style_summary">Choose a Battery Style</string>
	<string name="color">Color</string>
    <string name="flip">Flip</string>
    <string name="flip_summary">Sweep arch clockwise or counterclockwise</string>
    <string name="recolor">Re-Color</string>
    <string name="recolor_summary">Recolor Logo to defined Battery-Colors</string>
    <string name="show_zeiger">Show Pointer</string>
	<string name="color_zeiger">Pointer Color</string>
    <string name="color_zeiger_summary">Some Batteries have a Pointer - set its color here</string>
	<string name="zeiger_srcin">Pointer only on non-transparent logo-image</string>
    <string name="zeiger_srcin_summary">Pointer only in non-transparent areas of logo-image</string>
			
    <string name="header_size">Battery Size</string>
	<string name="header_size_summary">Battery Size and Position ....</string>
    <string name="header_title_battery">Battery Style</string>
	<string name="header_summary_battery">Battery Style ....</string>
	<string name="header_title_battery_options">Colors</string>
	<string name="header_summary_battery_options">Re-Coloring... </string>
	<string name="header_title_background_options">Wallpaper Background</string>
	<string name="header_summary_background_options">Choose custom Wallpaper from Gallery....</string>
    <string name="header_about_options">About</string>
    <string name="header_about_options_summary">Info, Links and more about this App....</string>
	<string name="header_title_charge_options">Charge Options</string>
	<string name="header_summary_charge_options">Options defining the behaviour on charge...</string>
	<string name="header_title_number_options">Level Number</string>
	<string name="header_summary_number_options">Level-Number, Color, Fontsize ....</string>
	<string name="header_title_battstatus_options">Battery Status</string>
	<string name="header_summary_battstatus_options">Health, Temperature, Voltage ....</string>
		
    <string name="threshold_low">Threshold for low battery</string>
	<string name="threshold_low_summary">Threshold for low battery levels</string>
	<string name="threshold_mid">Threshold for mid battery</string>
	<string name="threshold_mid_summary">Threshold for mid battery levels</string>

	<string name="number_color">Level-Number-Color</string>
	<string name="colored_numbers">Numbers are colored</string>
	<string name="colored_numbers_summary">Numbers are colored like Battery-Level-Color</string>
	<string name="show_number">Show Battery-Level-Numbers</string>
	<string name="show_number_summary">Premium Version only</string>
	<string name="show_rand">Show Border</string>
	<string name="show_status">Show Battery Status</string>
	<string name="battStatusStyle">Battery Status Style</string>
	<string name="battStatusStyle_summary">What should be displayed?</string>
				
	<string name="gradient_colors">Gradient Colors</string>
	<string name="gradient_colors_summary">Gradient Color according to the Battery Level</string>
	<string name="gradient_colors_mid">Gradient Colors (mid -> low)</string>
	<string name="gradient_colors_mid_summary">Gradient Color according to the Battery Level</string>
    <string name="fontsize100">Reduce fontsize in 100 percent Batt-Level</string>
    <string name="fontsize100_summary">Size reduction of font when Battery-Level is on 100 percent</string>
    <string name="fontsize">Fontsize</string>
    <string name="fontsize_summary">Adjust fontsize of Battery-Level-Number</string>

    <string name="Charging">Charging...</string>
	<string name="ChargingUSB">Charging on USB</string>
	<string name="ChargingAC">Charging on AC</string>
	<string name="charge_enable">Show Charge Status</string>
	<string name="charge_enable_summary">Show if AC/USB-Charging</string>
	<string name="chargestatus_color">Color of Charge Status</string>
	<string name="charge_colors_enable">Use different color on charge</string>
	<string name="charge_colors_enable_summary">Use different color on charge</string>
	<string name="charge_color">Color on charge</string>
	<string name="chargestatus_radius">Radius of Chargestatus Text</string>
	<string name="chargestatus_radius_summary">The Radius, where the Charge-Status-Text should circle</string>
	
	<string name="resizePortrait">Resizing - Portrait-Mode</string>
	<string name="resizePortrait_summary">Resizing when in portrait-mode....</string>
	<string name="resizeLandscape">Resizing - Landscape-Mode</string>
	<string name="resizeLandscape_summary">Resizing when in landscape-mode....</string>
    <string name="centerBattery">Center Battery</string>
    <string name="centerBattery_summary">Center battery in the middle of the screen</string>
	<string name="vertical_position">Vertical Offset - Portrait-Mode</string>
	<string name="vertical_position_summary">Offset from bottom of the screen in portrait-mode</string>
	<string name="vertical_position_landscape">Vertical Offset - Landscape-Mode</string>
	<string name="vertical_position_landscape_summary">Offset from bottom of the screen in landscape-mode</string>

	<string name="scale_numbers_transparent">Transparent scale numbers</string>
	<string name="scale_numbers_transparent_summary">Scale Numbers are transparent</string>
	<string name="scale_color">Scale Color</string>
	<string name="scale_color_summary">Color of Scale Numbers</string>
	<string name="status_color">Battery Status Text Color</string>
	<string name="status_color_summary">Color of Battery Status Text</string>
	<string name="battstatus_radius">Radius of Battery Status Text</string>
	<string name="battstatus_radius_summary">The Radius, where the Battery-Status-Text should be displayed</string>
	
	<string name="keepAspectRatio">Keep the aspect ratio of the Background-Image</string>
	<string name="keepAspectRatio_summary">If disabled the Background-Image is scaled to exact dimensions of the screen (no background sliding in that case)</string>

	<string name="maskLogo">Use a mask for the Logo-Image</string>
	<string name="maskList">Choose a mask</string>
	<string name="maskList_summary">Choose a mask to crop the Logo-Image into a special Shape</string>
	<string name="customLogo">Use custom Logo-Image</string>
	<string name="logoPicker">Choose a Logo-Image</string>
	<string name="logoPicker_summary">Pick a custom Logo-Image as Battery-Image....the Logo-Image can be any image, but for good results it should be a square image and at least around 500x500 pixel!</string>
	<string name="logo_background_brightness">Logo Background Brightness</string>
	<string name="logo_background_brightness_summary">Brightness of grayscaled Background of logo</string>
	<string name="logo_hue">Change Hue of Logo-Image</string>
	<string name="logo_hue_summary">Hue of Logo-Image</string>
																	
	<string name="zeiger_length">Pointer Lenth</string>
	
		
</resources>