<?xml version="1.0" encoding="utf-8"?>

<preference-headers
        xmlns:android="http://schemas.android.com/apk/res/android">

    <header android:fragment="de.geithonline.logolwp.BattPreferencesFragment"
            android:icon="@drawable/icon"
            android:title="@string/header_title_battery"
            android:summary="@string/header_summary_battery" />

    <header android:fragment="de.geithonline.logolwp.SizePreferencesFragment"
            android:icon="@drawable/size"
            android:title="@string/header_size"
            android:summary="@string/header_size_summary" />
    
    <header android:fragment="de.geithonline.logolwp.BattColorPreferencesFragment"
            android:icon="@drawable/color"
            android:title="@string/header_title_battery_options"
            android:summary="@string/header_summary_battery_options" />

    <header android:fragment="de.geithonline.logolwp.BattNumberPreferencesFragment"
            android:icon="@drawable/number"
            android:title="@string/header_title_number_options"
            android:summary="@string/header_summary_number_options" />

    <header android:fragment="de.geithonline.logolwp.BattStatusPreferencesFragment"
            android:icon="@drawable/status"
            android:title="@string/header_title_battstatus_options"
            android:summary="@string/header_summary_battstatus_options" />
    
    <header android:fragment="de.geithonline.logolwp.BattChargingPreferencesFragment"
            android:icon="@drawable/charge"
            android:title="@string/header_title_charge_options"
            android:summary="@string/header_summary_charge_options" />
    
    <header android:fragment="de.geithonline.logolwp.BackgroundPreferencesFragment"
            android:icon="@drawable/wallpaper"
            android:title="@string/header_title_background_options"
            android:summary="@string/header_summary_background_options"
            />

    <header android:fragment="de.geithonline.logolwp.AboutFragment"
            android:icon="@drawable/about"
            android:title="@string/header_about_options"
            android:summary="@string/header_about_options_summary"
            />
    
    
</preference-headers>
