<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:stylelistpreference="http://schemas.android.com/apk/res/de.geithonline.logolwp"
    xmlns:imagelistpreference="http://schemas.android.com/apk/lib/de.geithonline.android.basics.preferences.imagelistpreference">
 
    <PreferenceCategory 
        android:title="@string/category_size"
        android:summary="@string/category_size_summary">
        

        <de.geithonline.android.basics.preferences.SliderPreference
    		android:key="resizePortrait"
		    android:title="@string/resizePortrait"
		    android:defaultValue="1.0"
		    android:dialogMessage="@string/resizePortrait" />
       <de.geithonline.android.basics.preferences.SliderPreference
    		android:key="resizeLandscape"
		    android:title="@string/resizeLandscape"
		    android:defaultValue="1.0"
		    android:dialogMessage="@string/resizeLandscape" />
        
        <CheckBoxPreference 
            android:key="centerBattery"
            android:title="@string/centerBattery"
            android:summary="@string/centerBattery_summary"
            android:defaultValue="true"
            android:disableDependentsState="true"
        	/>
        
        <EditTextPreference
		    android:key="vertical_position"
    		android:defaultValue="0"
		    android:title="@string/vertical_position" 
    		android:dialogTitle="@string/vertical_position"
		    android:inputType="number"
		    android:summary="@string/vertical_position_summary"
		    android:dependency="centerBattery"
         	/>
        <EditTextPreference
		    android:key="vertical_position_landscape"
    		android:defaultValue="0"
		    android:title="@string/vertical_position_landscape" 
    		android:dialogTitle="@string/vertical_position_landscape"
		    android:inputType="number"
		    android:summary="@string/vertical_position_landscape_summary"
		    android:dependency="centerBattery"
         	/>
        
    </PreferenceCategory>
        
</PreferenceScreen>