<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <PreferenceCategory 
        android:title="@string/category_status_options">
        <CheckBoxPreference 
            android:key="show_status"
            android:title="@string/show_status"
            android:defaultValue="false"
            />
        <ListPreference
	        android:defaultValue="0"
	        android:title="@string/battStatusStyle" 
            android:summary="@string/battStatusStyle_summary" 
	        android:dialogTitle="@string/battStatusStyle"
	        android:entries="@array/battStatusStyle"
	        android:entryValues="@array/battStatusStyleValues"
	        android:key="battStatusStyle"
	        android:dependency="show_status"
	        />
	    <de.geithonline.android.basics.preferences.colorpicker.ColorPickerPreference
	        android:key="status_color"
	        android:title="@string/status_color" 
	        android:summary="@string/status_color_summary"
	        android:defaultValue="@integer/COLOR_WHITE"
	        android:dependency="show_status"
	        />
	    
	    <de.geithonline.android.basics.preferences.SliderPreference
    		android:key="battstatus_radius"
		    android:title="@string/battstatus_radius"
		    android:defaultValue="1.0"
		    android:dialogMessage="@string/battstatus_radius" />
	    
    </PreferenceCategory>


</PreferenceScreen>